Add CAPABILITY entity type across schema, code, config, and prompts
Schema and Code:
- schema.sql: Add CAPABILITY to entities table type comment
- models.py: Add CAPABILITY to EntityNode.entity_type comment
- prompts.yaml: Add CAPABILITY to all 3 entity extraction schemas

Config:
- config-cerebras-v3.yaml: Add CAPABILITY to allowed_types list
- Update entity extraction model to gpt-5-nano (fast/cheap)

Complete entity type list:
PERSON | ORG | SYSTEM | PROJECT | PLACE | SKILL | CAPABILITY | TOOL | FILE | CONCEPT

--- a/src/vestig/core/prompts.yaml
+++ b/src/vestig/core/prompts.yaml
@@ -172,7 +172,7 @@ extract_memories_v4:
           "entities": [
             {
               "name": "canonical entity name",
-              "type": "PERSON|ORG|SYSTEM|PROJECT|TOOL|PLACE|SKILL|FILE|CONCEPT",
+              "type": "PERSON|ORG|SYSTEM|PROJECT|TOOL|PLACE|SKILL|CAPABILITY|FILE|CONCEPT",
               "confidence": 0.0-1.0,
               "evidence": "exact text snippet supporting this entity extraction"
             }
@@ -263,7 +263,7 @@ extract_memories_from_session:
           "entities": [
             {
               "name": "entity name",
-              "type": "PERSON|ORG|SYSTEM|PROJECT|PLACE|SKILL|TOOL|FILE|CONCEPT",
+              "type": "PERSON|ORG|SYSTEM|PROJECT|PLACE|SKILL|CAPABILITY|TOOL|FILE|CONCEPT",
               "confidence": 0.0-1.0,
               "evidence": "text snippet supporting this entity"
             }
@@ -528,7 +528,7 @@ extract_entities:
       "entities": [
         {
           "name": "canonical entity name",
-          "type": "PERSON|ORG|SYSTEM|PROJECT|TOOL|PLACE|SKILL|FILE|CONCEPT",
+          "type": "PERSON|ORG|SYSTEM|PROJECT|TOOL|PLACE|SKILL|CAPABILITY|FILE|CONCEPT",
           "confidence": 0.0-1.0,
           "evidence": "exact text snippet supporting this extraction",
           "normalization_notes": "optional: why this canonical form was chosen"
