--- a/config.yaml
+++ b/config.yaml
@@ -1,22 +1,26 @@
-# Vestig Configuration
-
-# Display settings
-display:
-  show_version: true  # Set to false to suppress version output on startup
+# Vestig v3 Config - Enhanced entity extraction with rate limiting
+# Uses improved entity guidelines to reduce generic CONCEPT noise
 
 # Embedding configuration
 embedding:
-  model: "BAAI/bge-m3"
-  dimension: 1024
+  provider: "llm"
+  model: "embeddinggemma:latest"
+  dimension: 768
   normalize: true
 
 # Storage
 storage:
-  db_path: ./data/memory.db
+  db_path: "vestig.db"
 
 # Retrieval
 retrieval:
   default_limit: 5
+
+  # M5: Entity-based retrieval (hybrid semantic + entity matching)
+  entity_path:
+    enabled: true                    # Enable hybrid retrieval
+    entity_weight: 0.5               # Balance: 0.5 semantic + 0.5 entity
+    similarity_threshold: 0.7        # Min similarity for entity matching
 
 # M2: Content hygiene (quality firewall)
 hygiene:
@@ -27,15 +31,40 @@ hygiene:
   near_duplicate:
     enabled: true
     threshold: 0.92
+    skip_manual_source: true
 
 # Document ingestion (LLM-based memory extraction)
 ingestion:
-  model: claude-sonnet-4.5          # LLM for memory extraction
-  chunk_size: 20000                 # Characters per chunk (≈5k tokens)
-  chunk_overlap: 500                # Overlap for context continuity
-  min_confidence: 0.6               # Minimum confidence threshold
-  format: auto                      # auto|plain|claude-session
-  force_entities: []                # Forced entities (TYPE:Name) on every memory
+  model: phi3:latest
+  chunk_size: 4000
+  chunk_overlap: 400
+  min_confidence: 0.8
+  format: auto
+  force_entities: []
+
+  # Two-pass extraction: separate memory and entity extraction
+  two_pass_extraction:
+    enabled: true                # Use two-pass (extract_memories_simple + extract_entities)
+    memory_prompt: "extract_memories_simple"
+    entity_prompt: "extract_entities"
+    batch_entity_extraction: true  # Batch multiple memories for entity extraction
+    batch_size: 50                 # Memories per batch
+
+  # JSON parsing retry logic (handles malformed LLM responses)
+  retry:
+    max_attempts: 3               # Retry up to 3 times on JSON parse failures
+    backoff_seconds: 1.0          # Wait between retries (exponential: 1s, 2s, 4s)
+
+  # Rate limiting for Cerebras API
+  # Tier 1: 30 RPM / 60k TPM
+  # Tier 2: 900 RPM / 1M TPM
+  rate_limits:
+    requests_per_minute: 30      # Conservative limit for tier 1
+    tokens_per_minute: 60000     # 60k tokens per minute
+    # If you have tier 2 access, increase to:
+    # requests_per_minute: 900
+    # tokens_per_minute: 1000000
+
   claude_session:
     include_roles:
       - user
@@ -47,12 +76,9 @@ ingestion:
 
 # Prompt configuration
 prompts:
-  # Memory extraction prompt (from prompts.yaml)
-  extract_memories: "extract_memories_from_session"
-
-  # Summary generation prompt (from prompts.yaml)
-  # Change to "summary_v2" or other versions to experiment
-  summary: "summary_v1"
+  # v4 extraction prompt with tiered entity hierarchy and quality gates
+  extract_memories: "extract_memories_v4"
+  summary: "summary_v2"
 
 # M3: Time & Truth (TraceRank, temporal ranking)
 m3:
@@ -61,62 +87,67 @@ m3:
 
   tracerank:
     enabled: true
-    tau_days: 21          # Recency decay time constant (weeks)
-    cooldown_hours: 24    # Anti-burst window (1 day)
-    burst_discount: 0.2   # Weight for burst events (0-1)
-    k: 0.35               # TraceRank boost strength
+    tau_days: 21
+    cooldown_hours: 24
+    burst_discount: 0.2
+    k: 0.35                         # Temporal boost strength
+    graph_connectivity_enabled: false  # Disable graph boost (testing pure temporal)
+    graph_k: 0.0
 
   retrieval:
-    include_expired: false  # Show deprecated memories by default?
+    include_expired: false
 
 # M4: Graph Layer (entities, edges, traversal)
+# v3: Stricter entity extraction to reduce noise
 m4:
   entity_types:
-    # Configurable entity types (not hardcoded)
     allowed_types:
-      - PERSON      # People, developers, users
-      - ORG         # Organizations, companies, teams
-      - SYSTEM      # Software systems, services, applications
-      - PROJECT     # Projects, repositories, codebases
-      - PLACE       # Locations, servers, environments
-      - SKILL       # Programming languages, methodologies, techniques
-      - TOOL        # Tools, libraries, frameworks, packages
-      - FILE        # Files, paths, configurations, documents
-      - CONCEPT     # Abstract concepts, patterns, principles, ideas
+      - PERSON
+      - ORG
+      - SYSTEM
+      - PROJECT
+      - PLACE
+      - SKILL
+      - TOOL
+      - FILE
+      - CONCEPT     # v3: Use sparingly, domain-specific only
 
   entity_extraction:
     enabled: true
-    mode: llm              # "llm" or "heuristic"
+    mode: llm
 
-    # LLM extraction settings
     llm:
-      model: claude-sonnet-4.5  # Or from global config
+      model: claude-haiku-4.5
       max_entities_per_memory: 10
-      min_confidence: 0.75       # Only create edges above this threshold
-      store_low_confidence: false  # Don't store edges below threshold
-      max_evidence_length: 200   # Chars for evidence field
+      min_confidence: 0.80           # v3: Slightly higher threshold
+      store_low_confidence: false
+      max_evidence_length: 200
 
-    # Optional heuristic cleanup (post-LLM)
+      # Rate limiting for entity extraction (uses same Cerebras limits)
+      rate_limits:
+        requests_per_minute: 30
+        tokens_per_minute: 60000
+
     heuristics:
-      strip_titles: true         # "Dr Alice" → "Alice"
-      normalize_org_suffixes: true  # "Acme Ltd" → "Acme"
-      reject_garbage: true       # All punctuation, too short
-      split_lists: false         # "A, B and C" → separate entities (risky)
+      strip_titles: true
+      normalize_org_suffixes: true
+      reject_garbage: true
+      split_lists: false
 
   edge_creation:
     mentions:
       enabled: true
       default_weight: 1.0
-      confidence_gated: true     # Respect min_confidence from extraction
+      confidence_gated: true
 
     related:
       enabled: true
-      similarity_threshold: 0.6   # Conservative (high bar)
-      max_edges_per_memory: 10    # Cap to prevent graph sprawl
+      similarity_threshold: 0.7
+      max_edges_per_memory: 10
 
   graph_expansion:
     enabled: true
-    max_expand_via_entities: 3   # Limit 1-hop entity expansion
-    max_expand_via_related: 3    # Limit 1-hop RELATED expansion
-    include_expired: false       # Exclude expired edges by default
-    min_confidence: 0.75         # Exclude low-confidence edges from expansion
+    max_expand_via_entities: 3
+    max_expand_via_related: 3
+    include_expired: false
+    min_confidence: 0.75
