Implement per-chunk summary generation with chunk-based idempotency
- Move summary generation inside chunk loop (≥2 memories threshold)
- Add get_summary_for_chunk() method to storage layer
- Update commit_summary() idempotency check to use chunk_id when available
- Summaries now properly link to chunks via chunk_id foreign key
- Maintains backward compatibility for legacy artifact_ref-based summaries

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,11 @@
 # Vestig v3 Config - Enhanced entity extraction with rate limiting
 # Uses improved entity guidelines to reduce generic CONCEPT noise
 
+# Environment variables (optional - set at runtime if not already set)
+# User's shell environment takes precedence
+# env:
+#   OLLAMA_HOST: "192.168.20.8"  # Uncomment to use remote Ollama
+
 # Embedding configuration
 embedding:
   provider: "llm"
